test/invalid-syntax/64854_non_letter_id/non_letter_id.agu
-- Author: 64854, Diogo Almeida

-- an id starting with a non letter
let 1a : Int = 10